# OpenMindSteed

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_adapter.yml
.github/workflows/: ci.yml  release.yml
docs/: OPENMINDSTEED_PLAN.md  backup-restore.md  codex-local-provider.md  obsidian-sync.md  provider-presets.md  release.md  testing.md
docs/example-vault/: .mindsteed-sync.json  Index.md
docs/example-vault/Trees/意马学习法-rootmind/: Index.md
docs/example-vault/Trees/意马学习法-rootmind/Nodes/: 01-意马学习法-rootmind.md  02-节点式对话-dialogue.md  03-Obsidian 同步-obsidian.md
scripts/: check-no-secrets.mjs  generate-codex-protocol.mjs
src/: App.test.ts  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/domain/: ids.ts  normalize.test.ts  normalize.ts  sampleData.ts  selectors.ts  types.ts
src/features/ai/: codexLocalProvider.ts  index.ts  mockProvider.ts  openAICompatibleProvider.ts  prompts.test.ts  prompts.ts  provider.ts  providerPresets.test.ts  providerPresets.ts
src/features/obsidian/: exampleVault.test.ts  export.test.ts  export.ts
src/state/: MindSteedStore.tsx  persistence.test.ts  persistence.ts
src/tauri/: bridge.test.ts  bridge.ts
tests/e2e/: workspace.spec.ts
