[package]
name = "openmindsteed"
version = "0.1.1"
description = "OpenMindSteed desktop shell"
authors = ["OpenMindSteed contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
reqwest = "0.13"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
